fix(ui): MetricsTable - job name header nowrap

--- a/packages/ui/src/components/metrics-table/metrics-table.module.css
+++ b/packages/ui/src/components/metrics-table/metrics-table.module.css
@@ -36,6 +36,10 @@
   padding-right: var(--space-xxsmall);
 }
 
+.jobName {
+  white-space: nowrap;
+}
+
 /* columns overrides for showHeaderSum */
 .showHeaderSum .headerRowColumns .value,
 .showHeaderSum .headerRowColumns .delta {
